# presence

./: .env.example  .gitignore  Cargo.toml  PLAN.md  README.md  com.presence.daemon.plist
.cargo/: config.toml
src/: config.rs  email.rs  holidays.rs  llm.rs  main.rs  off_days.rs  report.rs  telegram.rs
