[package]
name = "presence"
version = "0.1.0"
edition = "2024"

[features]
default = []
metal = ["mistralrs/metal"]
cuda = ["mistralrs/cuda"]

[dependencies]
mistralrs = "0.8"

tokio = { version = "1", features = ["full"] }
tokio-cron-scheduler = "0.13"
chrono = "0.4"
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"
lettre = { version = "0.11", features = ["tokio1-native-tls", "builder", "smtp-transport"] }
reqwest = { version = "0.12", features = ["json"] }
rand = "0.9"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
